# poc-rust-htmx

./: .gitignore  Cargo.toml  README.md  input.css
assets/: htmx.min.js  ws.min.js
assets/style/: output.css
src/: lib.rs  main.rs  state.rs  utils.rs
src/chat/: handlers.rs  state.rs  templates.rs
src/templates/: todos.rs
src/todos/: handlers.rs  mod.rs  state.rs  templates.rs
tests/: e2e.rs
